[Definicion de bases]

--- a/Ingesta_Datos_Abiertos.ipynb
+++ b/Ingesta_Datos_Abiertos.ipynb
@@ -138,8 +138,8 @@
     "# Celda 2: Guardar los DataFrames como tablas Delta\n",
     "# La función .saveAsTable() guarda los datos y registra la tabla en el Unity Catalog.\n",
     "# El modo \"overwrite\" reemplaza la tabla si ya existe, ideal para actualizaciones.\n",
-    "df_secop.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"main.diplomado_datos.secop\")\n",
-    "df_men.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"main.diplomado_datos.men_estadisticas\")\n",
+    "df_secop.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"main.diplomado.secop\")\n",
+    "df_men.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"main.diplomado.men_estadisticas\")\n",
     "\n",
     "print(\"¡Tablas guardadas exitosamente en el catálogo 'main', esquema 'diplomado_datos'!\")"
    ]
