--- a/Ingesta_Datos_Abiertos.ipynb
+++ b/Ingesta_Datos_Abiertos.ipynb
@@ -143,6 +143,125 @@
     "\n",
     "print(\"¡Tablas guardadas exitosamente en el catálogo 'main', esquema 'diplomado_datos'!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fc12d6be-034d-4bd1-8af9-b9f0d9b5de24",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Paso 1: Descargar los datos con requests y leerlos en pandas\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from io import StringIO\n",
+    "from pyspark.sql import SparkSession\n",
+    " \n",
+    "spark = SparkSession.builder.getOrCreate()\n",
+    " \n",
+    "url_secop = \"https://www.datos.gov.co/resource/rpmr-utcd.csv?$limit=10&$offset=1\"\n",
+    "# Descargar contenido\n",
+    "response_secop = requests.get(url_secop)\n",
+    " \n",
+    "# Convertir contenido a pandas usando StringIO\n",
+    "df_secop_pd = pd.read_csv(StringIO(response_secop.text), delimiter=',', header=0)\n",
+    " \n",
+    "# Convertir pandas a Spark\n",
+    "df_secop = spark.createDataFrame(df_secop_pd)\n",
+    " \n",
+    "# Mostrar en Databricks\n",
+    "display(df_secop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f26a82d8-b08b-4034-8dae-bf09e573b683",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "url_secop = \"https://www.datos.gov.co/resource/rpmr-utcd.csv?$limit=10&$offset=0\"\n",
+    "# Descargar contenido\n",
+    "response_secop = requests.get(url_secop)\n",
+    " \n",
+    "# Convertir contenido a pandas usando StringIO\n",
+    "df_secop_pd = pd.read_csv(StringIO(response_secop.text), delimiter=',', header=0)\n",
+    " \n",
+    "# Convertir pandas a Spark\n",
+    "df_secop = spark.createDataFrame(df_secop_pd)\n",
+    " \n",
+    "# Mostrar en Databricks\n",
+    "display(df_secop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a4bb851b-d80e-4289-908e-e335e0a0c7b0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pip install sodapy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e06642f7-2bd3-4ccc-a659-e5e50ca76964",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sodapy import Socrata\n",
+    "\n",
+    "#client = Socrata(\"www.datos.gov.co\", None)\n",
+    "\n",
+    "token = dbutils.secrets.get(\"claves\",\"token_app\")\n",
+    "codigo_dataset = dbutils.widgets.get(\"codigo_dataset\")\n",
+    "\n",
+    "client = Socrata(\"www.datos.gov.co\",str(token))\n",
+    " "
+   ]
   }
  ],
  "metadata": {
